--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,14 +15,14 @@ android {
         applicationId 'de.hoell.jobcontrol'
         minSdkVersion 14
         targetSdkVersion 19
-        versionName '0.9.5 BETA'
+        versionName '0.9.9 BETA'
         signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            versionNameSuffix 'test123'
+            versionNameSuffix '0.9.9'
             signingConfig signingConfigs.config
         }
         debug {
