--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,14 @@
                 android:value="de.hoell.jobcontrol.MainActivity" />
 
         </activity>
+        <activity
+            android:name="de.hoell.jobcontrol.historie.Historie_Activity"
+            android:label="@string/title_activity_historie">
+
+            </activity>
+
+
+
     </application>
 
 </manifest>
