--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.hoell.jobcontrol"
+    android:name="de.hoell.Jobcontrol"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
 
-    android:versionCode="3"
-    android:versionName="1.2"
+    android:versionCode="4"
+    android:versionName="1.5"
     ><!--TODO:  VersionCode: immer +1 bei neuer Version
          TODO:  VersionName: String den der User sieht-->
 
