--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.hoell.jobcontrol"
-    android:name="de.hoell.Jobcontrol"
+    android:name=".Jobcontrol"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
 
-    android:versionCode="12"
-    android:versionName="1.10.2"
+    android:versionCode="13"
+    android:versionName="1.10.3"
     ><!--TODO:  VersionCode: immer +1 bei neuer Version
          TODO:  VersionName: String den der User sieht-->
 
