--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.hoell.jobcontrol"
-    android:name=".Jobcontrol"
+    android:name="de.hoell.Jobcontrol"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
 
@@ -18,7 +18,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".Jobcontrol"
+        >
+
         <activity
             android:name=".Start"
             android:label="@string/app_name" >
