--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.hoell.jobcontrol"
     android:name="de.hoell.Jobcontrol"
+    package="de.hoell.jobcontrol"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
-
     android:versionCode="17"
-    android:versionName="1.12.2"
-    ><!--TODO:  VersionCode: immer +1 bei neuer Version
-         TODO:  VersionName: String den der User sieht-->
+    android:versionName="1.12.2" >
+
+    <!--
+TODO:  VersionCode: immer +1 bei neuer Version
+         TODO:  VersionName: String den der User sieht
+    -->
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".Jobcontrol"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-     android:theme="@style/AppTheme"
-     android:name=".Jobcontrol"
-     >
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".Start"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-     <activity
-         android:name=".Start"
-         android:label="@string/app_name" >
-         <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_slidermenu" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ticketlist.TicketDetailsActivity"
+            android:label="@string/title_activity_ticket_details"
+            android:parentActivityName=".MainActivity" >
 
-             <category android:name="android.intent.category.LAUNCHER" />
-         </intent-filter>
-     </activity>
-     <activity
-         android:name=".MainActivity"
-         android:label="@string/title_activity_slidermenu" >
-         <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
-         </intent-filter>
-     </activity>
-     <activity
-         android:name=".ticketlist.TicketDetailsActivity"
-         android:label="@string/title_activity_ticket_details"
-         android:parentActivityName=".MainActivity" >
-
-         <!-- Parent activity meta-data to support 4.0 and lower -->
+            <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hoell.jobcontrol.MainActivity" />
@@ -51,7 +53,7 @@
         <activity
             android:name=".historie.Historie_Activity"
             android:label="@string/title_activity_historie"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ticketlist.Rueckmeldung"
@@ -60,15 +62,23 @@
         <activity
             android:name=".ticketlist.InfoActivity"
             android:label="@string/title_activity_info"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".ticketlist.NewInfo"
-            android:label="@string/title_activity_new_info">
+            android:label="@string/title_activity_new_info" >
         </activity>
         <activity
             android:name=".ticketlist.Eskalation"
             android:label="@string/title_activity_eskalation" >
+        </activity>
+        <activity
+            android:name=".preference.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.hoell.jobcontrol.MainActivity" />
         </activity>
     </application>
 
