--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="de.hoell.jobcontrol"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
-    android:versionCode="17"
-    android:versionName="1.12.2" >
+    android:versionCode="19"
+    android:versionName="1.15" >
 
     <!--
 TODO:  VersionCode: immer +1 bei neuer Version
@@ -51,7 +51,7 @@ TODO:  VersionCode: immer +1 bei neuer Version
                 android:value="de.hoell.jobcontrol.MainActivity" />
         </activity>
         <activity
-            android:name=".historie.Historie_Activity"
+            android:name=".ticketlist.Historie_Activity"
             android:label="@string/title_activity_historie"
             android:screenOrientation="portrait" >
         </activity>
@@ -80,6 +80,19 @@ TODO:  VersionCode: immer +1 bei neuer Version
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.hoell.jobcontrol.MainActivity" />
         </activity>
+
+        <receiver android:icon="@drawable/appwidget_preview"
+            android:label="@string/widget_name"
+            android:name=".widget.WidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider" />
+        </receiver>
+        <service android:name=".widget.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
