--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
         }
     }
     productFlavors {
+        flavor_bluestack {
+            minSdkVersion 18
+            applicationId 'de.hoell.jobcontrol'
+            signingConfig signingConfigs.config
+            targetSdkVersion 18
+        }
     }
 }
 
@@ -35,4 +41,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.google.android.gms:play-services:7.8.0'
 }
