--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
     package="de.hoell.jobcontrol"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
-    android:versionCode="20"
-    android:versionName="1.20" >
+    android:versionCode="24"
+    android:versionName="1.24"
+    >
 
     <!--
 TODO:  VersionCode: immer +1 bei neuer Version
@@ -25,9 +26,7 @@ TODO:  VersionCode: immer +1 bei neuer Version
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <meta-data
-            android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode" />
+
         <activity
             android:name=".Start"
             android:label="@string/app_name" >
