--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         }
     }
     compileSdkVersion 22
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '23.0.2'
     defaultConfig {
         applicationId 'de.hoell.jobcontrol'
         minSdkVersion 21
@@ -37,10 +37,10 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:design:22.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+
      // Stetho core
-    /*                    compile 'com.facebook.stetho:stetho:1.2.0'
+                        compile 'com.facebook.stetho:stetho:1.2.0'
 
                         //If you want to add a network helper
                         compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
-    */
 }
