--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
     compile 'com.android.support:design:22.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-
-     // Stetho core
-                        compile 'com.facebook.stetho:stetho:1.2.0'
-
-                        //If you want to add a network helper
-                        compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
+    // Stetho core
+    compile 'com.facebook.stetho:stetho:1.2.0'
+    //If you want to add a network helper
+    compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
 }
