--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,7 +102,8 @@ TODO:  VersionCode: immer +1 bei neuer Version
 
         <activity
             android:name=".schein.Arbeitsschein"
-            android:label="@string/title_activity_arbeitsschein" >
+            android:label="@string/title_activity_arbeitsschein"
+            android:screenOrientation="portrait">
         </activity>
 
 
